# To-Do-List

./: README.md  pyproject.toml
src/todo_list_tk/: __init__.py  __main__.py  controller.py  main.py  model.py  storage.py  theming.py  ui.py  utils.py
tests/: test_model.py  test_storage.py
